--- a/enqueue.css
+++ b/enqueue.css
@@ -29,12 +29,11 @@ header {
   font-weight: 300;
   background-color: #c52c25; /*youtube red*/
   color: white;
-  padding:1rem;
+  padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: auto;
-  height:50px;
   user-select: none;
 }
 
@@ -67,7 +66,6 @@ h1 {
 }
 
 .dropdown {
-  /* position: relative; */
   display: inline-block;
 }
 
@@ -84,31 +82,28 @@ h1 {
   font-size: 1rem;
   text-align: center;
   background-color: #f9f9f9;
-  min-width: 160px;
   border-radius: 0.5rem;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   
 }
 
-.dropdown-content a {
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content-option{
   color: black;
   padding: 0.75rem 1rem;
   text-decoration: none;
   display: block;
 }
 
-.dropdown-content a:hover {
+.dropdown-content-option:hover {
   background-color: #e5e5e5;
+  cursor: pointer;
 }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
-} */
 
 
 /* .video-preview {
