Added a New Delete Button
CSS
- User select turned off on the entire extension for a cleaner look
- Changed the font size of the order number
- Added so the number hides when the video is hovered and the delete button appears
- Added the CSS for the new container holding the order number and the delete button
- Added the css for the delete button image

HTML
- Added the html for a new container holding the order number and delete button
	- This is to prevent the video thumbnail and titles jumping around when hovered

JS
- Added so the new html components get added with each new video entry

--- a/enqueue.css
+++ b/enqueue.css
@@ -22,6 +22,7 @@ body {
   padding:0;
   width: 400px;
   height: 500px;
+  user-select: none;
  /* scrolling bars */
 }
 
@@ -151,8 +152,12 @@ h1 {
 }
 
 .video-order-number{
-  min-width: 1.25rem;
+  font-size: 1.5rem;
   text-align: center;
+}
+
+.video-entry:hover .video-order-number{
+  display: none;
 }
 
 .video-thumbnail{
@@ -187,11 +192,29 @@ h1 {
   cursor: pointer;
 }
 
-#video-drag-button-image{
-  height: 1rem;
+.video-button-image{
+  height: 1.5rem;
   pointer-events: none;
 }
 
+.delete-button{
+  display: none;
+}
+
+.video-entry:hover .delete-button{
+  display: block;
+}
+
+#video-delete-button-image{
+  height: 1rem;
+}
+
+.video-left-side-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.25rem;
+}
 /* .video-preview {
   margin-bottom: 10px;
 }
