--- a/enqueue.css
+++ b/enqueue.css
@@ -21,8 +21,10 @@ body {
   margin:0;
   padding:0;
   width: 400px;
-  height: 500px;
+  height: 575px;
   user-select: none;
+  display: flex;
+  flex-direction: column;
  /* scrolling bars */
 }
 
@@ -136,7 +138,7 @@ h1 {
 
 .video-container{
   overflow-y: scroll;
-  height: 100%;
+  flex-grow: 1;
 }
 
 .video-entry{
@@ -214,6 +216,52 @@ h1 {
   justify-content: center;
   align-items: center;
   width: 1.25rem;
+}
+
+.video-input-container{
+  width: calc(400px - (2 * 1rem));
+  bottom: 0;
+  padding: 1rem;
+  background-color: #4d4d4d;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+#video-input-instruction{
+  font-size: 1rem;
+  color: white;
+  margin: 0;
+  font-weight: 100;
+}
+
+.input-box-container{
+  display: flex;
+  width: 100%;
+  gap: 0.5rem
+}
+
+#video-input-box{
+  font-family: 'Spotify';
+  font-weight: 100;
+  font-size: 1rem;
+  padding: 0 0.5rem;
+  flex-grow: 1;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+}
+
+#video-input-submit-button{
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  background-color: #c52c25;
+  color: white;
+  font-family: 'Spotify';
+  font-size: 1rem;
+  padding: 0.25rem 1rem;
+  cursor: pointer;
 }
 /* .video-preview {
   margin-bottom: 10px;
