--- a/enqueue.css
+++ b/enqueue.css
@@ -281,6 +281,15 @@ h1 {
   padding: 0.25rem 1rem;
   cursor: pointer;
 }
+
+.hide{
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.hide:hover{
+  cursor:default;
+}
 /* .video-preview {
   margin-bottom: 10px;
 }
